Нарисовал адаптивную сетку каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,8 +41,12 @@
         </div>
       </nav>
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
-          alt="Логотип Седоны">
+        <picture class="page-header__picture">
+          <source srcset="img/logos/upper-logo-big.png" media="(min-width: 1200px)" width="187" hight="97">
+          <source srcset="img/logos/upper-logo-middle.png" media="(min-width: 768px)" width="102" hight="84">
+          <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
+            alt="Логотип Седоны">
+        </picture>
       </a>
     </header>
 
@@ -50,7 +54,10 @@
       <section class="intro">
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Седона - фото и видео достопримечательностей</h1>
-          <img class="intro__logo" src="img/logos/logo-small.png" width="229" height="39" alt="Вы определённо в Седоне">
+          <picture>
+            <source srcset="img/logos/logo-middle.png" media="(min-width: 768px)" width="457" hight="78">
+            <img class="intro__logo" src="img/logos/logo-small.png" width="229" height="39" alt="Вы всё еще в Седоне">
+          </picture>
         </div>
       </section>
       <section class="photo-catalog">
@@ -63,8 +70,14 @@
           </header>
           <div class="photo-catalog__item image-container photo-catalog__item--current">
             <a class="image-container__link" href="#">
-              <img class="image-container__photo" src="img/photos/photo-wide-vastness-small.jpg" width="280"
-                height="280" alt="Дороги Седоны">
+              <picture>
+                <source srcset="img/photos/photo-wide-vastness-big.jpg" media="(min-width: 1200px)" width="1200"
+                  hight="400">
+                <source srcset="img/photos/photo-wide-vastness-middle.jpg" media="(min-width: 768px)" width="648"
+                  hight="400">
+                <img class="image-container__photo" src="img/photos/photo-wide-vastness-small.jpg" width="280"
+                  height="280" alt="Дороги Седоны">
+              </picture>
             </a>
             <div class="image-container__info">
               <div class="image-container__title">
@@ -84,8 +97,14 @@
           </div>
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
-              <img class="image-container__photo" src="img/photos/photo-local-flora-small.jpg" width="280" height="280"
-                alt="Флора Седоны">
+              <picture>
+                <source srcset="img/photos/photo-local-flora-big.jpg" media="(min-width: 1200px)" width="400"
+                  hight="267">
+                <source srcset="img/photos/photo-local-flora-middle.jpg" media="(min-width: 768px)" width="324"
+                  hight="267">
+                <img class="image-container__photo" src="img/photos/photo-local-flora-small.jpg" width="280"
+                  height="280" alt="Флора Седоны">
+              </picture>
             </a>
             <div class="image-container__info">
               <div class="image-container__title">
@@ -105,8 +124,13 @@
           </div>
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
-              <img class="image-container__photo" src="img/photos/photo-nord-road-small.jpg" width="280" height="280"
-                alt="Живописная северная часть Седоны">
+              <picture>
+                <source srcset="img/photos/photo-nord-road-big.jpg" media="(min-width: 1200px)" width="400" hight="267">
+                <source srcset="img/photos/photo-nord-road-middle.jpg" media="(min-width: 768px)" width="324"
+                  hight="267">
+                <img class="image-container__photo" src="img/photos/photo-nord-road-small.jpg" width="280" height="280"
+                  alt="Живописная северная часть Седоны">
+              </picture>
             </a>
             <div class="image-container__info">
               <div class="image-container__title">
@@ -126,8 +150,14 @@
           </div>
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
-              <img class="image-container__photo" src="img/photos/photo-devils-bridge-small.jpg" width="280"
-                height="280" alt="Вид на Мост Дьявола в Седоне">
+              <picture>
+                <source srcset="img/photos/photo-devils-bridge-big.jpg" media="(min-width: 1200px)" width="400"
+                  hight="267">
+                <source srcset="img/photos/photo-devils-bridge-middle.jpg" media="(min-width: 768px)" width="324"
+                  hight="267">
+                <img class="image-container__photo" src="img/photos/photo-devils-bridge-small.jpg" width="280"
+                  height="280" alt="Вид на Мост Дьявола в Седоне">
+              </picture>
             </a>
             <div class="image-container__info">
               <div class="image-container__title">
@@ -154,8 +184,12 @@
             очередной раз!</p>
         </header>
         <div class="video-box__video">
-          <img class="video-box__clip" src="img/photos/video-screenshot-small.jpg" width="320" height="201"
-            alt="Видео презентация Седоны">
+          <picture>
+            <source srcset="img/photos/video-screenshot-big.jpg" media="(min-width: 1200px)" width="800" hight="500">
+            <source srcset="img/photos/video-screenshot-middle.jpg" media="(min-width: 768px)" width="648" hight="500">
+            <img class="video-box__clip" src="img/photos/video-screenshot-small.jpg" width="320" height="201"
+              alt="Видео презентация Седоны">
+          </picture>
         </div>
         <div class="video-box__controls controls-set">
           <div class="controls-set__replay">
