--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
 <body class="page-body">
   <div class="container">
     <header class="page-header">
-      <nav class="navigation">
+      <nav class="navigation navigation--opened">
         <div class="navigation__wrapper">
           <ul class="navigation__list">
             <li class="navigation__item navigation__item--active">
