Дополнил декорацию на главной

--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,10 @@
 <body class="page-body">
   <div class="container">
     <header class="page-header">
-      <nav class="navigation navigation--opened">
+      <nav class="navigation navigation--opened navigation--nojs">
         <div class="navigation__wrapper">
           <ul class="navigation__list">
-            <li class="navigation__item navigation__item--active">
+            <li class="navigation__item navigation__item--current">
               <a class="navigation__link">
                 Главная
               </a>
