--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 <body class="page-body">
   <div class="container">
     <header class="page-header">
-      <nav class="navigation">
+      <nav class="navigation navigation--opened navigation--nojs">
         <div class="navigation__wrapper">
           <ul class="navigation__list">
             <li class="navigation__item">
@@ -25,7 +25,7 @@
                 Фото и видео
               </a>
             </li>
-            <li class="navigation__item navigation__item--active">
+            <li class="navigation__item navigation__item--current">
               <a class="navigation__link">
                 Форма отзыва
               </a>
