Внес исправления, добавил фавиконки и лого в svg

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона - фото и видео</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/icons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -42,9 +45,9 @@
       </nav>
       <a class="page-header__logo" href="index.html">
         <picture class="page-header__picture">
-          <source srcset="img/logos/upper-logo-big.png" media="(min-width: 1200px)" width="187" hight="97">
-          <source srcset="img/logos/upper-logo-middle.png" media="(min-width: 768px)" width="102" hight="84">
-          <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
+          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)" width="187" hight="97">
+          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)" width="102" hight="84">
+          <img class="page-header__logo-image" src="img/logos/upper-logo-small.svg" width="102" height="84"
             alt="Логотип Седоны">
         </picture>
       </a>
@@ -55,8 +58,8 @@
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Седона - фото и видео достопримечательностей</h1>
           <picture>
-            <source srcset="img/logos/logo-middle.png" media="(min-width: 768px)" width="457" hight="78">
-            <img class="intro__logo" src="img/logos/logo-small.png" width="229" height="39" alt="Вы всё еще в Седоне">
+            <source srcset="img/logos/logo-middle.svg" media="(min-width: 768px)" width="457" hight="78">
+            <img class="intro__logo" src="img/logos/logo-small.svg" width="229" height="39" alt="Вы всё еще в Седоне">
           </picture>
         </div>
       </section>
@@ -205,7 +208,7 @@
                 d="M5.49393 0.946737C7.99764 0.946737 10.0273 2.97662 10.0273 5.48029C10.0273 7.98395 7.99764 10.0135 5.49393 10.0135C2.99023 10.0135 0.960569 7.98395 0.960569 5.48029C0.960569 2.97662 2.99023 0.946737 5.49393 0.946737Z"
                 fill="white" />
             </svg>
-            <svg width="235" height="3" viewBox="0 0 235 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="235" height="3" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect opacity="0.2" width="235" height="3" fill="white" />
             </svg>
           </div>
