--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Добро пожаловать в Седону!</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/icons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -41,9 +44,9 @@
       </nav>
       <a class="page-header__logo">
         <picture class="page-header__picture">
-          <source srcset="img/logos/upper-logo-big.png" media="(min-width: 1200px)" width="187" hight="97">
-          <source srcset="img/logos/upper-logo-middle.png" media="(min-width: 768px)" width="102" hight="84">
-          <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
+          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)" width="187" hight="97">
+          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)" width="102" hight="84">
+          <img class="page-header__logo-image" src="img/logos/upper-logo-small.svg" width="102" height="84"
             alt="Логотип Седоны">
         </picture>
       </a>
@@ -54,8 +57,8 @@
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
           <picture>
-            <source srcset="img/logos/intro-logo-middle.png" media="(min-width: 768px)" width="461" hight="350">
-            <img class="intro__logo" src="img/logos/intro-logo-small.png" width="282" height="214"
+            <source srcset="img/logos/intro-logo-middle.svg" media="(min-width: 768px)" width="461" hight="350">
+            <img class="intro__logo" src="img/logos/intro-logo-small.svg" width="282" height="214"
               alt="Добро пожаловать в Седону">
           </picture>
         </div>
