--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона - оставьте свой отзыв!</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/icons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -42,9 +45,9 @@
       </nav>
       <a class="page-header__logo" href="index.html">
         <picture class="page-header__picture">
-          <source srcset="img/logos/upper-logo-big.png" media="(min-width: 1200px)" width="187" hight="97">
-          <source srcset="img/logos/upper-logo-middle.png" media="(min-width: 768px)" width="102" hight="84">
-          <img class="page-header__logo-image" src="img/logos/upper-logo.png" width="102" height="84"
+          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)" width="187" hight="97">
+          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)" width="102" hight="84">
+          <img class="page-header__logo-image" src="img/logos/upper-logo-small.svg" width="102" height="84"
             alt="Логотип Седоны">
         </picture>
       </a>
@@ -55,8 +58,8 @@
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Седона - форма обратной связи</h1>
           <picture>
-            <source srcset="img/logos/logo-middle.png" media="(min-width: 768px)" width="457" hight="78">
-            <img class="intro__logo" src="img/logos/logo-small.png" width="229" height="39" alt="Вы всё еще в Седоне">
+            <source srcset="img/logos/logo-middle.svg" media="(min-width: 768px)" width="457" hight="78">
+            <img class="intro__logo" src="img/logos/logo-small.svg" width="229" height="39" alt="Вы всё еще в Седоне">
           </picture>
         </div>
       </section>
