Установил адаптивную графику для всех трех страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -74,12 +74,13 @@
           <div class="photo-catalog__item image-container photo-catalog__item--current">
             <a class="image-container__link" href="#">
               <picture>
-                <source srcset="img/photos/photo-wide-vastness-big.jpg" media="(min-width: 1200px)" width="1200"
-                  hight="400">
-                <source srcset="img/photos/photo-wide-vastness-middle.jpg" media="(min-width: 768px)" width="648"
-                  hight="400">
-                <img class="image-container__photo" src="img/photos/photo-wide-vastness-small.jpg" width="280"
-                  height="280" alt="Дороги Седоны">
+                <source srcset="img/photos/photo-wide-vastness-big.jpg 1x, img/photos/photo-wide-vastness-big@2x.jpg 2x"
+                  media="(min-width: 1200px)" width="1200" hight="400">
+                <source
+                  srcset="img/photos/photo-wide-vastness-middle.jpg 1x, img/photos/photo-wide-vastness-middle@2x.jpg 2x"
+                  media="(min-width: 768px)" width="648" hight="400">
+                <img class="image-container__photo" src="img/photos/photo-wide-vastness-small.jpg"
+                  srcset="img/photos/photo-wide-vastness-small@2x.jpg 2x" width="280" height="280" alt="Дороги Седоны">
               </picture>
             </a>
             <div class="image-container__info">
@@ -101,12 +102,13 @@
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
               <picture>
-                <source srcset="img/photos/photo-local-flora-big.jpg" media="(min-width: 1200px)" width="400"
-                  hight="267">
-                <source srcset="img/photos/photo-local-flora-middle.jpg" media="(min-width: 768px)" width="324"
-                  hight="267">
-                <img class="image-container__photo" src="img/photos/photo-local-flora-small.jpg" width="280"
-                  height="280" alt="Флора Седоны">
+                <source srcset="img/photos/photo-local-flora-big.jpg 1x, img/photos/photo-local-flora-big@2x.jpg 2x"
+                  media="(min-width: 1200px)" width="400" hight="267">
+                <source
+                  srcset="img/photos/photo-local-flora-middle.jpg 1x, img/photos/photo-local-flora-middle@2x.jpg 2x"
+                  media="(min-width: 768px)" width="324" hight="267">
+                <img class="image-container__photo" src="img/photos/photo-local-flora-small.jpg"
+                  srcset="img/photos/photo-local-flora-small@2x.jpg 2x" width="280" height="280" alt="Флора Седоны">
               </picture>
             </a>
             <div class="image-container__info">
@@ -128,10 +130,12 @@
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
               <picture>
-                <source srcset="img/photos/photo-nord-road-big.jpg" media="(min-width: 1200px)" width="400" hight="267">
-                <source srcset="img/photos/photo-nord-road-middle.jpg" media="(min-width: 768px)" width="324"
-                  hight="267">
-                <img class="image-container__photo" src="img/photos/photo-nord-road-small.jpg" width="280" height="280"
+                <source srcset="img/photos/photo-nord-road-big.jpg 1x, img/photos/photo-nord-road-big@2x.jpg 2x"
+                  media="(min-width: 1200px)" width="400" hight="267">
+                <source srcset="img/photos/photo-nord-road-middle.jpg 1x, img/photos/photo-nord-road-middle@2x.jpg 2x"
+                  media="(min-width: 768px)" width="324" hight="267">
+                <img class="image-container__photo" src="img/photos/photo-nord-road-small.jpg"
+                  srcset="img/photos/photo-nord-road-small@2x.jpg 2x" width="280" height="280"
                   alt="Живописная северная часть Седоны">
               </picture>
             </a>
@@ -154,12 +158,14 @@
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
               <picture>
-                <source srcset="img/photos/photo-devils-bridge-big.jpg" media="(min-width: 1200px)" width="400"
-                  hight="267">
-                <source srcset="img/photos/photo-devils-bridge-middle.jpg" media="(min-width: 768px)" width="324"
-                  hight="267">
-                <img class="image-container__photo" src="img/photos/photo-devils-bridge-small.jpg" width="280"
-                  height="280" alt="Вид на Мост Дьявола в Седоне">
+                <source srcset="img/photos/photo-devils-bridge-big.jpg 1x, img/photos/photo-devils-bridge-big@2x.jpg 2x"
+                  media="(min-width: 1200px)" width="400" hight="267">
+                <source
+                  srcset="img/photos/photo-devils-bridge-middle.jpg 1x, img/photos/photo-devils-bridge-middle@2x.jpg 2x"
+                  media="(min-width: 768px)" width="324" hight="267">
+                <img class="image-container__photo" src="img/photos/photo-devils-bridge-small.jpg"
+                  srcset="img/photos/photo-devils-bridge-small@2x.jpg 2x" width="280" height="280"
+                  alt="Вид на Мост Дьявола в Седоне">
               </picture>
             </a>
             <div class="image-container__info">
@@ -188,9 +194,12 @@
         </header>
         <div class="video-box__video">
           <picture>
-            <source srcset="img/photos/video-screenshot-big.jpg" media="(min-width: 1200px)" width="800" hight="500">
-            <source srcset="img/photos/video-screenshot-middle.jpg" media="(min-width: 768px)" width="648" hight="500">
-            <img class="video-box__clip" src="img/photos/video-screenshot-small.jpg" width="320" height="201"
+            <source srcset="img/photos/video-screenshot-big.jpg 1x, img/photos/video-screenshot-big@2x.jpg 2x"
+              media="(min-width: 1200px)" width="800" hight="500">
+            <source srcset="img/photos/video-screenshot-middle.jpg 1x, img/photos/video-screenshot-middle@2x.jpg 2x"
+              media="(min-width: 768px)" width="648" hight="500">
+            <img class="video-box__clip" src="img/photos/video-screenshot-small.jpg"
+              srcset="img/photos/video-screenshot-small@2x.jpg 2x" width="320" height="201"
               alt="Видео презентация Седоны">
           </picture>
         </div>
