--- a/source/index.html
+++ b/source/index.html
@@ -77,9 +77,9 @@
                 <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <picture class="advantages__picture">
-                <source srcset="img/photos/city-photo-big.jpg" media="(min-width: 1200px)" width="800" height="256">
-                <source srcset="img/photos/city-photo-middle.jpg" media="(min-width: 768px)" width="512" height="256">
-                <img class="advantages__photo" src="img/photos/city-photo-small.jpg" width="320" height="260"
+                <source srcset="img/photos/city-photo-big.jpg 1x, img/photos/city-photo-big@2x.jpg 2x" media="(min-width: 1200px)" width="800" height="256">
+                <source srcset="img/photos/city-photo-middle.jpg 1x, img/photos/city-photo-middle@2x.jpg 2x" media="(min-width: 768px)" width="512" height="256">
+                <img class="advantages__photo" src="img/photos/city-photo-small.jpg" srcset="img/photos/city-photo-small@2x.jpg 2x" width="320" height="260"
                   alt="Местные окрестности">
               </picture>
             </li>
@@ -105,9 +105,9 @@
                 <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <picture class="advantages__picture">
-                <source srcset="img/photos/bridge-photo-big.jpg" media="(min-width: 1200px)" width="800" height="256">
-                <source srcset="img/photos/bridge-photo-middle.jpg" media="(min-width: 768px)" width="512" height="256">
-                <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" width="320" height="260"
+                <source srcset="img/photos/bridge-photo-big.jpg 1x, img/photos/bridge-photo-big@2x.jpg 2x" media="(min-width: 1200px)" width="800" height="256">
+                <source srcset="img/photos/bridge-photo-middle.jpg 1x, img/photos/bridge-photo-middle@2x.jpg 2x" media="(min-width: 768px)" width="512" height="256">
+                <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" srcset="img/photos/bridge-photo-small@2x.jpg 2x" width="320" height="260"
                   alt="Вид на Мост дьявола">
               </picture>
             </li>
