--- a/source/form.html
+++ b/source/form.html
@@ -45,8 +45,8 @@
       </nav>
       <a class="page-header__logo" href="index.html">
         <picture class="page-header__picture">
-          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)" width="187" hight="97">
-          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)" width="102" hight="84">
+          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)">
+          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)">
           <img class="page-header__logo-image" src="img/logos/upper-logo-small.svg" width="102" height="84"
             alt="Логотип Седоны">
         </picture>
@@ -58,7 +58,7 @@
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Седона - форма обратной связи</h1>
           <picture>
-            <source srcset="img/logos/logo-middle.svg" media="(min-width: 768px)" width="457" hight="78">
+            <source srcset="img/logos/logo-middle.svg" media="(min-width: 768px)">
             <img class="intro__logo" src="img/logos/logo-small.svg" width="229" height="39" alt="Вы всё еще в Седоне">
           </picture>
         </div>
