--- a/source/index.html
+++ b/source/index.html
@@ -44,8 +44,8 @@
       </nav>
       <a class="page-header__logo">
         <picture class="page-header__picture">
-          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)" width="187" hight="97">
-          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)" width="102" hight="84">
+          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)">
+          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)">
           <img class="page-header__logo-image" src="img/logos/upper-logo-small.svg" width="102" height="84"
             alt="Логотип Седоны">
         </picture>
@@ -57,7 +57,7 @@
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
           <picture>
-            <source srcset="img/logos/intro-logo-middle.svg" media="(min-width: 768px)" width="461" hight="350">
+            <source srcset="img/logos/intro-logo-middle.svg" media="(min-width: 768px)">
             <img class="intro__logo" src="img/logos/intro-logo-small.svg" width="282" height="214"
               alt="Добро пожаловать в Седону">
           </picture>
@@ -77,8 +77,8 @@
                 <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <picture class="advantages__picture">
-                <source srcset="img/photos/city-photo-big.jpg 1x, img/photos/city-photo-big@2x.jpg 2x" media="(min-width: 1200px)" width="800" height="256">
-                <source srcset="img/photos/city-photo-middle.jpg 1x, img/photos/city-photo-middle@2x.jpg 2x" media="(min-width: 768px)" width="512" height="256">
+                <source srcset="img/photos/city-photo-big.jpg 1x, img/photos/city-photo-big@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photos/city-photo-middle.jpg 1x, img/photos/city-photo-middle@2x.jpg 2x" media="(min-width: 768px)">
                 <img class="advantages__photo" src="img/photos/city-photo-small.jpg" srcset="img/photos/city-photo-small@2x.jpg 2x" width="320" height="260"
                   alt="Местные окрестности">
               </picture>
@@ -105,8 +105,8 @@
                 <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <picture class="advantages__picture">
-                <source srcset="img/photos/bridge-photo-big.jpg 1x, img/photos/bridge-photo-big@2x.jpg 2x" media="(min-width: 1200px)" width="800" height="256">
-                <source srcset="img/photos/bridge-photo-middle.jpg 1x, img/photos/bridge-photo-middle@2x.jpg 2x" media="(min-width: 768px)" width="512" height="256">
+                <source srcset="img/photos/bridge-photo-big.jpg 1x, img/photos/bridge-photo-big@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photos/bridge-photo-middle.jpg 1x, img/photos/bridge-photo-middle@2x.jpg 2x" media="(min-width: 768px)">
                 <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" srcset="img/photos/bridge-photo-small@2x.jpg 2x" width="320" height="260"
                   alt="Вид на Мост дьявола">
               </picture>
