--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,8 +45,8 @@
       </nav>
       <a class="page-header__logo" href="index.html">
         <picture class="page-header__picture">
-          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)" width="187" hight="97">
-          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)" width="102" hight="84">
+          <source srcset="img/logos/upper-logo-big.svg" media="(min-width: 1200px)">
+          <source srcset="img/logos/upper-logo-middle.svg" media="(min-width: 768px)">
           <img class="page-header__logo-image" src="img/logos/upper-logo-small.svg" width="102" height="84"
             alt="Логотип Седоны">
         </picture>
@@ -58,7 +58,7 @@
         <div class="intro__wrapper">
           <h1 class="visually-hidden">Седона - фото и видео достопримечательностей</h1>
           <picture>
-            <source srcset="img/logos/logo-middle.svg" media="(min-width: 768px)" width="457" hight="78">
+            <source srcset="img/logos/logo-middle.svg" media="(min-width: 768px)">
             <img class="intro__logo" src="img/logos/logo-small.svg" width="229" height="39" alt="Вы всё еще в Седоне">
           </picture>
         </div>
@@ -75,10 +75,10 @@
             <a class="image-container__link" href="#">
               <picture>
                 <source srcset="img/photos/photo-wide-vastness-big.jpg 1x, img/photos/photo-wide-vastness-big@2x.jpg 2x"
-                  media="(min-width: 1200px)" width="1200" hight="400">
+                  media="(min-width: 1200px)">
                 <source
                   srcset="img/photos/photo-wide-vastness-middle.jpg 1x, img/photos/photo-wide-vastness-middle@2x.jpg 2x"
-                  media="(min-width: 768px)" width="648" hight="400">
+                  media="(min-width: 768px)">
                 <img class="image-container__photo" src="img/photos/photo-wide-vastness-small.jpg"
                   srcset="img/photos/photo-wide-vastness-small@2x.jpg 2x" width="280" height="280" alt="Дороги Седоны">
               </picture>
@@ -103,10 +103,10 @@
             <a class="image-container__link" href="#">
               <picture>
                 <source srcset="img/photos/photo-local-flora-big.jpg 1x, img/photos/photo-local-flora-big@2x.jpg 2x"
-                  media="(min-width: 1200px)" width="400" hight="267">
+                  media="(min-width: 1200px)">
                 <source
                   srcset="img/photos/photo-local-flora-middle.jpg 1x, img/photos/photo-local-flora-middle@2x.jpg 2x"
-                  media="(min-width: 768px)" width="324" hight="267">
+                  media="(min-width: 768px)">
                 <img class="image-container__photo" src="img/photos/photo-local-flora-small.jpg"
                   srcset="img/photos/photo-local-flora-small@2x.jpg 2x" width="280" height="280" alt="Флора Седоны">
               </picture>
@@ -131,9 +131,9 @@
             <a class="image-container__link" href="#">
               <picture>
                 <source srcset="img/photos/photo-nord-road-big.jpg 1x, img/photos/photo-nord-road-big@2x.jpg 2x"
-                  media="(min-width: 1200px)" width="400" hight="267">
+                  media="(min-width: 1200px)">
                 <source srcset="img/photos/photo-nord-road-middle.jpg 1x, img/photos/photo-nord-road-middle@2x.jpg 2x"
-                  media="(min-width: 768px)" width="324" hight="267">
+                  media="(min-width: 768px)">
                 <img class="image-container__photo" src="img/photos/photo-nord-road-small.jpg"
                   srcset="img/photos/photo-nord-road-small@2x.jpg 2x" width="280" height="280"
                   alt="Живописная северная часть Седоны">
@@ -159,10 +159,10 @@
             <a class="image-container__link" href="#">
               <picture>
                 <source srcset="img/photos/photo-devils-bridge-big.jpg 1x, img/photos/photo-devils-bridge-big@2x.jpg 2x"
-                  media="(min-width: 1200px)" width="400" hight="267">
+                  media="(min-width: 1200px)">
                 <source
                   srcset="img/photos/photo-devils-bridge-middle.jpg 1x, img/photos/photo-devils-bridge-middle@2x.jpg 2x"
-                  media="(min-width: 768px)" width="324" hight="267">
+                  media="(min-width: 768px)">
                 <img class="image-container__photo" src="img/photos/photo-devils-bridge-small.jpg"
                   srcset="img/photos/photo-devils-bridge-small@2x.jpg 2x" width="280" height="280"
                   alt="Вид на Мост Дьявола в Седоне">
@@ -195,9 +195,9 @@
         <div class="video-box__video">
           <picture>
             <source srcset="img/photos/video-screenshot-big.jpg 1x, img/photos/video-screenshot-big@2x.jpg 2x"
-              media="(min-width: 1200px)" width="800" hight="500">
+              media="(min-width: 1200px)">
             <source srcset="img/photos/video-screenshot-middle.jpg 1x, img/photos/video-screenshot-middle@2x.jpg 2x"
-              media="(min-width: 768px)" width="648" hight="500">
+              media="(min-width: 768px)">
             <img class="video-box__clip" src="img/photos/video-screenshot-small.jpg"
               srcset="img/photos/video-screenshot-small@2x.jpg 2x" width="320" height="201"
               alt="Видео презентация Седоны">
