--- a/source/index.html
+++ b/source/index.html
@@ -77,10 +77,12 @@
                 <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <picture class="advantages__picture">
-                <source srcset="img/photos/city-photo-big.jpg 1x, img/photos/city-photo-big@2x.jpg 2x" media="(min-width: 1200px)">
-                <source srcset="img/photos/city-photo-middle.jpg 1x, img/photos/city-photo-middle@2x.jpg 2x" media="(min-width: 768px)">
-                <img class="advantages__photo" src="img/photos/city-photo-small.jpg" srcset="img/photos/city-photo-small@2x.jpg 2x" width="320" height="260"
-                  alt="Местные окрестности">
+                <source srcset="img/photos/city-photo-big.jpg 1x, img/photos/city-photo-big@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <source srcset="img/photos/city-photo-middle.jpg 1x, img/photos/city-photo-middle@2x.jpg 2x"
+                  media="(min-width: 768px)">
+                <img class="advantages__photo" src="img/photos/city-photo-small.jpg"
+                  srcset="img/photos/city-photo-small@2x.jpg 2x" width="320" height="260" alt="Местные окрестности">
               </picture>
             </li>
             <li class="advantages__item features">
@@ -91,7 +93,8 @@
                 </li>
                 <li class="features__item features__item--present">
                   <h3 class="features__header">Сувениры</h3>
-                  <p class="features__desc">Не только китайского, но и местного производства!</p>
+                  <p class="features__desc">Не только китайского, <br class="features__desc--break">но и местного
+                    производства!</p>
                 </li>
                 <li class="features__item features__item--meal">
                   <h3 class="features__header">Еда</h3>
@@ -100,15 +103,17 @@
             </li>
             <li class="advantages__item">
               <div class="advantages__content advantages__content--special">
-                <h3 class="advantages__header">Там есть Мост дьявола</h3>
+                <h3 class="advantages__header">Там есть <br class="advantages__header--break">Мост дьявола</h3>
                 <p class="advantages__counter">— №2 —</p>
                 <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <picture class="advantages__picture">
-                <source srcset="img/photos/bridge-photo-big.jpg 1x, img/photos/bridge-photo-big@2x.jpg 2x" media="(min-width: 1200px)">
-                <source srcset="img/photos/bridge-photo-middle.jpg 1x, img/photos/bridge-photo-middle@2x.jpg 2x" media="(min-width: 768px)">
-                <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg" srcset="img/photos/bridge-photo-small@2x.jpg 2x" width="320" height="260"
-                  alt="Вид на Мост дьявола">
+                <source srcset="img/photos/bridge-photo-big.jpg 1x, img/photos/bridge-photo-big@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <source srcset="img/photos/bridge-photo-middle.jpg 1x, img/photos/bridge-photo-middle@2x.jpg 2x"
+                  media="(min-width: 768px)">
+                <img class="advantages__photo" src="img/photos/bridge-photo-small.jpg"
+                  srcset="img/photos/bridge-photo-small@2x.jpg 2x" width="320" height="260" alt="Вид на Мост дьявола">
               </picture>
             </li>
             <li class="advantages__item">
@@ -138,7 +143,8 @@
       <section class="booking-search">
         <div class="booking-search__wrapper">
           <h2 class="booking-search__header">Заинтересовались?</h2>
-          <p class="booking-search__action">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+          <p class="booking-search__action">Укажите предполагаемые даты поездки, <br
+              class="booking-search__action--break">и мы покажем вам лучшие предложения
             гостиниц в Cедоне</p>
           <button class="booking-search__button" type="button">Найти гостиницу</button>
         </div>
@@ -154,35 +160,29 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <section class="page-footer__contacts">
-          <h2>#visitSEDONA</h2>
+          <h2 class="page-footer__hashtag">#visitSEDONA</h2>
         </section>
         <section class="page-footer__social socials">
           <h3 class="visually-hidden">Ссылки на социальные сети</h3>
           <ul class="socials__list">
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
-                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z"
-                    fill="white" />
+                <svg class="socials__button-twitter" width="18" height="15">
+                  <use xlink:href="sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
-                <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z"
-                    fill="white" />
+                <svg class="socials__button-facebook" width="9" height="19">
+                  <use xlink:href="sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
-                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z"
-                    fill="white" />
+                <svg class="socials__button-youtube" width="20" height="14">
+                  <use xlink:href="sprite.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
@@ -192,11 +192,8 @@
           <h3 class="visually-hidden">Ссылка на HTML Academy</h3>
           <span class="page-footer__desc">Разработано</span>
           <a class="page-footer__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg"
-              aria-label="HTML Academy">
-              <path
-                d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"
-                fill="black" />
+            <svg class="page-footer__link-icon" width="27" height="35" aria-label="HTML Academy">
+              <use xlink:href="sprite.svg#htmlacademy-logo"></use>
             </svg>
           </a>
         </section>
