PixelPerfect для каталога + WebP

--- a/source/index.html
+++ b/source/index.html
@@ -77,6 +77,11 @@
                 <p class="advantages__slogan">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <picture class="advantages__picture">
+                <source type="image/webp" srcset="img/photos/city-photo-big.webp 1x, img/photos/city-photo-big@2x.webp 2x"
+                  media="(min-width: 1200px)">
+                <source type="image/webp" srcset="img/photos/city-photo-middle.webp 1x, img/photos/city-photo-middle@2x.webp 2x"
+                  media="(min-width: 768px)">
+                <source type="image/webp" srcset="img/photos/city-photo-small.webp 1x, img/photos/city-photo-small@2x.webp 2x">
                 <source srcset="img/photos/city-photo-big.jpg 1x, img/photos/city-photo-big@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source srcset="img/photos/city-photo-middle.jpg 1x, img/photos/city-photo-middle@2x.jpg 2x"
