--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/icons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
@@ -96,7 +96,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#like-icon"></use>
+                  <use xlink:href="sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">1350</span>
               </p>
@@ -122,7 +122,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#like-icon"></use>
+                  <use xlink:href="sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">143</span>
               </p>
@@ -148,7 +148,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#like-icon"></use>
+                  <use xlink:href="sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">96</span>
               </p>
@@ -175,7 +175,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#like-icon"></use>
+                  <use xlink:href="sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">254</span>
               </p>
@@ -203,7 +203,7 @@
         <div class="video-box__controls controls-set">
           <div class="controls-set__replay">
             <svg class="controls-set__replay-icon" width="16" height="20">
-              <use xlink:href="sprite.svg#video-replay"></use>
+              <use xlink:href="sprite.svg#icon-video-replay"></use>
             </svg>
           </div>
           <div class="controls-set__playbar">
@@ -214,12 +214,12 @@
           </div>
           <div class="controls-set__subtitles">
             <svg class="controls-set__subtitles-icon" width="32" height="20">
-              <use xlink:href="sprite.svg#video-subtitles"></use>
+              <use xlink:href="sprite.svg#icon-video-subtitles"></use>
             </svg>
           </div>
           <div class="controls-set__fullscreen">
             <svg class="controls-set__fullscreen-icon" width="20" height="20">
-              <use xlink:href="sprite.svg#video-fullscreen"></use>
+              <use xlink:href="sprite.svg#icon-video-fullscreen"></use>
             </svg>
           </div>
         </div>
