Добавил ссылки на WebP

--- a/source/index.html
+++ b/source/index.html
@@ -113,6 +113,11 @@
                 <p class="advantages__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <picture class="advantages__picture">
+                <source type="image/webp" srcset="img/photos/bridge-photo-big.webp 1x, img/photos/bridge-photo-big@2x.webp 2x"
+                  media="(min-width: 1200px)">
+                <source type="image/webp" srcset="img/photos/bridge-photo-middle.webp 1x, img/photos/bridge-photo-middle@2x.webp 2x"
+                  media="(min-width: 768px)">
+                <source type="image/webp" srcset="img/photos/bridge-photo-small.webp 1x, img/photos/bridge-photo-small@2x.webp 2x">
                 <source srcset="img/photos/bridge-photo-big.jpg 1x, img/photos/bridge-photo-big@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source srcset="img/photos/bridge-photo-middle.jpg 1x, img/photos/bridge-photo-middle@2x.jpg 2x"
