--- a/source/catalog.html
+++ b/source/catalog.html
@@ -74,11 +74,14 @@
           <div class="photo-catalog__item image-container photo-catalog__item--current">
             <a class="image-container__link" href="#">
               <picture>
-                <source type="image/webp" srcset="img/photos/photo-wide-vastness-big.webp 1x, img/photos/photo-wide-vastness-big@2x.webp 2x"
+                <source type="image/webp"
+                  srcset="img/photos/photo-wide-vastness-big.webp 1x, img/photos/photo-wide-vastness-big@2x.webp 2x"
                   media="(min-width: 1200px)">
-                <source type="image/webp" srcset="img/photos/photo-wide-vastness-middle.webp 1x, img/photos/photo-wide-vastness-middle@2x.webp 2x"
+                <source type="image/webp"
+                  srcset="img/photos/photo-wide-vastness-middle.webp 1x, img/photos/photo-wide-vastness-middle@2x.webp 2x"
                   media="(min-width: 768px)">
-                <source type="image/webp" srcset="img/photos/photo-wide-vastness-small.webp 1x, img/photos/photo-wide-vastness-small@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/photos/photo-wide-vastness-small.webp 1x, img/photos/photo-wide-vastness-small@2x.webp 2x">
                 <source srcset="img/photos/photo-wide-vastness-big.jpg 1x, img/photos/photo-wide-vastness-big@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source
@@ -105,6 +108,14 @@
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
               <picture>
+                <source type="image/webp"
+                  srcset="img/photos/photo-local-flora-big.webp 1x, img/photos/photo-local-flora-big@2x.webp 2x"
+                  media="(min-width: 1200px)">
+                <source type="image/webp"
+                  srcset="img/photos/photo-local-flora-middle.webp 1x, img/photos/photo-local-flora-middle@2x.webp 2x"
+                  media="(min-width: 768px)">
+                <source type="image/webp"
+                  srcset="img/photos/photo-local-flora-small.webp 1x, img/photos/photo-local-flora-small@2x.webp 2x">
                 <source srcset="img/photos/photo-local-flora-big.jpg 1x, img/photos/photo-local-flora-big@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source
@@ -131,6 +142,14 @@
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
               <picture>
+                <source type="image/webp"
+                  srcset="img/photos/photo-nord-road-big.webp 1x, img/photos/photo-nord-road-big@2x.webp 2x"
+                  media="(min-width: 1200px)">
+                <source type="image/webp"
+                  srcset="img/photos/photo-nord-road-middle.webp 1x, img/photos/photo-nord-road-middle@2x.webp 2x"
+                  media="(min-width: 768px)">
+                <source type="image/webp"
+                  srcset="img/photos/photo-nord-road-small.webp 1x, img/photos/photo-nord-road-small@2x.webp 2x">
                 <source srcset="img/photos/photo-nord-road-big.jpg 1x, img/photos/photo-nord-road-big@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source srcset="img/photos/photo-nord-road-middle.jpg 1x, img/photos/photo-nord-road-middle@2x.jpg 2x"
@@ -157,6 +176,14 @@
           <div class="photo-catalog__item image-container">
             <a class="image-container__link" href="#">
               <picture>
+                <source type="image/webp"
+                  srcset="img/photos/photo-devils-bridge-big.webp 1x, img/photos/photo-devils-bridge-big@2x.webp 2x"
+                  media="(min-width: 1200px)">
+                <source type="image/webp"
+                  srcset="img/photos/photo-devils-bridge-middle.webp 1x, img/photos/photo-devils-bridge-middle@2x.webp 2x"
+                  media="(min-width: 768px)">
+                <source type="image/webp"
+                  srcset="img/photos/photo-devils-bridge-small.webp 1x, img/photos/photo-devils-bridge-small@2x.webp 2x">
                 <source srcset="img/photos/photo-devils-bridge-big.jpg 1x, img/photos/photo-devils-bridge-big@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source
@@ -191,6 +218,14 @@
         </header>
         <div class="video-box__video">
           <picture>
+            <source type="image/webp"
+              srcset="img/photos/video-screenshot-big.webp 1x, img/photos/video-screenshot-big@2x.webp 2x"
+              media="(min-width: 1200px)">
+            <source type="image/webp"
+              srcset="img/photos/video-screenshot-middle.webp 1x, img/photos/video-screenshot-middle@2x.webp 2x"
+              media="(min-width: 768px)">
+            <source type="image/webp"
+              srcset="img/photos/video-screenshot-small.webp 1x, img/photos/video-screenshot-small@2x.webp 2x">
             <source srcset="img/photos/video-screenshot-big.jpg 1x, img/photos/video-screenshot-big@2x.jpg 2x"
               media="(min-width: 1200px)">
             <source srcset="img/photos/video-screenshot-middle.jpg 1x, img/photos/video-screenshot-middle@2x.jpg 2x"
