PixelPerfect для модальных окон

--- a/source/form.html
+++ b/source/form.html
@@ -157,7 +157,7 @@
       <section class="modal-success">
         <header class="modal-success__header section-title">
           <h2 class="section-title__header">Ваш отзыв отправлен!</h2>
-          <p class="section-title__content">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
+          <p class="section-title__content">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы
             опубликуем его на сайте.
           </p>
         </header>
