--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,12 +10,14 @@
   <link rel="apple-touch-icon" href="img/icons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 
 <body class="page-body">
   <div class="container">
     <header class="page-header">
-      <nav class="navigation navigation--opened navigation--nojs">
+      <nav class="navigation navigation--nojs">
         <div class="navigation__wrapper">
           <ul class="navigation__list">
             <li class="navigation__item">
@@ -39,8 +41,10 @@
               </a>
             </li>
           </ul>
-          <button class="navigation__toggle" type="button"><span class="visually-hidden">Открыть
-              меню</span></button>
+          <button class="navigation__toggle" type="button" tabindex="1">
+            <span class="visually-hidden">Открыть меню</span>
+            <span class="navigation__toggle-icon"></span>
+          </button>
         </div>
       </nav>
       <a class="page-header__logo" href="index.html">
@@ -231,7 +235,7 @@
             <source srcset="img/photos/video-screenshot-middle.jpg 1x, img/photos/video-screenshot-middle@2x.jpg 2x"
               media="(min-width: 768px)">
             <img class="video-box__clip" src="img/photos/video-screenshot-small.jpg"
-              srcset="img/photos/video-screenshot-small@2x.jpg 2x" width="320" height="201"
+              srcset="img/photos/video-screenshot-small@2x.jpg 2x" loading="lazy" width="320" height="201"
               alt="Видео презентация Седоны">
           </picture>
         </div>
@@ -303,6 +307,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
