--- a/source/form.html
+++ b/source/form.html
@@ -157,7 +157,7 @@
               <textarea class="fieldset-emotions__textarea" rows="10" cols="40" name="emotions"
                 placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
-            <button class="feedback-form__button" type="button">Отправить отзыв</button>
+            <button class="feedback-form__button" type="submit">Отправить отзыв</button>
             <p class="feedback-form__info">* — обязательные поля</p>
           </form>
         </div>
